Fix game functionality: column chart layout, target word display, and letter input generation
- Fixed Column Lengths chart to display numbers below bars instead of overlapping title
- Adjusted chart container height and padding for proper spacing
- Removed redundant "After Last Guess" section from Game Analytics
- Added target word display in status message when game is lost
- Modified backend to include targetWord in game state response when game ends
- Fixed letter input generation issue - now properly creates inputs when new game starts
- Improved dictionary path resolution with better fallback handling and logging
- Added null checks for dictionary path validation

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -170,17 +170,10 @@
                 <div class="info-value" id="letterCount">-</div>
             </div>
             
-            <div class="info-section">
-                <div class="info-label">Column Lengths:</div>
-                <div id="columnLengthsChart" style="display: flex; align-items: flex-end; gap: 4px; height: 100px; padding: 10px; background: var(--bg-primary); border-radius: 6px; margin-top: 8px; width: 100%;">
+            <div class="info-section column-chart-section">
+                <div class="info-label" style="margin-bottom: 10px;">Column Lengths:</div>
+                <div id="columnLengthsChart" style="display: flex; align-items: flex-end; gap: 4px; height: 180px; padding: 10px 10px 20px 10px; background: var(--bg-primary); border-radius: 6px; width: 100%; box-sizing: border-box;">
                     <!-- Bar chart will be dynamically generated here -->
-                </div>
-            </div>
-            
-            <div class="remaining-words">
-                <div class="info-label">After Last Guess:</div>
-                <div id="lastGuessInfo" style="font-size: 0.9rem; color: var(--text-secondary); margin-top: 5px;">
-                    Start guessing to see word reduction analytics!
                 </div>
             </div>
         </div>
