--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,6 +53,7 @@
                         <option value="RANDOM">Random Selection</option>
                         <option value="ENTROPY" selected>Maximum Entropy</option>
                         <option value="MOST_COMMON_LETTERS">Most Common Letters</option>
+                        <option value="MINIMISE_COLUMN_LENGTHS">Minimise Column Lengths</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -155,6 +156,7 @@
                         <option value="RANDOM">Random Selection</option>
                         <option value="ENTROPY">Maximum Entropy</option>
                         <option value="MOST_COMMON_LETTERS">Most Common Letters</option>
+                        <option value="MINIMISE_COLUMN_LENGTHS">Minimise Column Lengths</option>
                     </select>
                     
                     <div class="suggestion-controls" style="display: flex; gap: 10px; margin-bottom: 12px;">
