Add stop autoplay functionality with toggle button
- Changed "Autoplay Games" button to toggle between start and stop modes
- Button turns red and displays "Stop Autoplay" when autoplay is running
- Added shouldStop flag to gracefully stop after current game completes
- Button updates to "Stopping..." while waiting for current game to finish
- Session stats displayed automatically after stop
- Properly resets button state and enables controls after stopping

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
                 <option value="">Loading dictionaries...</option>
             </select>
             <button class="btn btn-success" onclick="newGame()">New Game</button>
-            <button class="btn btn-info" onclick="showAutoplayModal()">Autoplay Games</button>
+            <button id="autoplayBtn" class="btn btn-info" onclick="toggleAutoplay()">Autoplay Games</button>
             <button class="btn btn-secondary" onclick="checkHealth()">Server Status</button>
             <button class="btn btn-danger" onclick="newSession()">New Session</button>
             <button class="btn btn-secondary" onclick="showSessionViewer()">View Session</button>
