--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -57,6 +57,11 @@
                     </select>
                 </div>
                 <div class="form-group">
+                    <label for="autoplayDelay">Delay Between Guesses (ms):</label>
+                    <input type="number" id="autoplayDelay" min="0" max="5000" step="100" value="1000" class="form-input">
+                    <small style="color: var(--text-secondary); font-size: 0.9em;">0 = No delay (fastest), 1000 = 1 second</small>
+                </div>
+                <div class="form-group">
                     <label for="autoplayDictionary">Dictionary:</label>
                     <select id="autoplayDictionary" class="form-input">
                         <option value="">Use first available</option>
