--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -384,45 +384,13 @@
         <section id="screen-dictionary" class="screen" hidden>
             <div class="screen-toolbar">
                 <div class="screen-toolbar-left">
-                    <h2 class="screen-title">Dictionary</h2>
-                    <div class="screen-subtitle">Explore word lists, letter frequency by position, and word complexity.</div>
+                    <h2 class="screen-title">Standard (5 Letters)</h2>
                 </div>
             </div>
 
             <div class="dictionary-grid">
+                <!-- Left Column: Letter Frequency (full height) -->
                 <div class="dictionary-col dictionary-col-left">
-                    <div class="panel dictionary-panel" aria-live="polite" aria-atomic="true">
-                        <h3>Summary</h3>
-                        <div id="dictionarySummary" class="dictionary-summary">
-                            <div class="dictionary-summary-row">
-                                <div class="dictionary-summary-label">Dictionary</div>
-                                <div class="dictionary-summary-value" id="dictionaryName">Select a dictionary from the menu above.</div>
-                            </div>
-                            <div class="dictionary-summary-row">
-                                <div class="dictionary-summary-label">Word length</div>
-                                <div class="dictionary-summary-value" id="dictionaryWordLength">-</div>
-                            </div>
-                            <div class="dictionary-summary-row">
-                                <div class="dictionary-summary-label">Word count</div>
-                                <div class="dictionary-summary-value" id="dictionaryWordCount">-</div>
-                            </div>
-                            <div class="dictionary-summary-row">
-                                <div class="dictionary-summary-label">Complexity model</div>
-                                <div class="dictionary-summary-value" id="dictionaryComplexityModel">Neighbour density (1–3 edits)</div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="panel dictionary-panel">
-                        <h3>Complexity Distribution</h3>
-                        <p class="dictionary-muted" id="dictionaryComplexityHint">
-                            Words with many near-neighbours (differing by 1–3 characters) tend to be harder to pin down.
-                        </p>
-                        <div id="dictionaryComplexityDistribution" class="dictionary-distribution">
-                            <p class="muted-center muted-small">No data loaded.</p>
-                        </div>
-                    </div>
-
                     <div class="panel dictionary-panel dictionary-panel-grow">
                         <h3>Letter Frequency by Position</h3>
                         <div class="dictionary-freq-scroll" id="dictionaryLetterFrequency">
@@ -431,7 +399,15 @@
                     </div>
                 </div>
 
+                <!-- Right Column: Complexity Distribution (top) + Words (bottom) -->
                 <div class="dictionary-col dictionary-col-right">
+                    <div class="panel dictionary-panel">
+                        <h3>Complexity Distribution</h3>
+                        <div id="dictionaryComplexityDistribution" class="dictionary-distribution">
+                            <p class="muted-center muted-small">No data loaded.</p>
+                        </div>
+                    </div>
+
                     <div class="panel dictionary-panel dictionary-panel-grow">
                         <h3>Words</h3>
                         <div class="dictionary-words-scroll" id="dictionaryWords">
