--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,6 +21,7 @@
                     <a class="nav-link" href="#/bot-performance" data-nav="bot-performance">Analyse</a>
                     <a class="nav-link" href="#/dictionary" data-nav="dictionary">Dictionary</a>
                     <a class="nav-link" href="#/admin" data-nav="admin">Admin</a>
+                    <a class="nav-link" href="#/help" data-nav="help">Help</a>
                     <a class="nav-link nav-link-signin" id="signInLink" href="/login.html" style="display: none;">Sign In</a>
                 </nav>
             </div>
@@ -403,7 +404,22 @@
             </div>
             <div class="panel placeholder-panel">
                 <h3>Coming soon</h3>
-                <p class="placeholder-text">This screen will manage configuration, users, and server session monitoring.</p>
+                <p>Administrative features are currently under development.</p>
+            </div>
+        </section>
+
+        <!-- Screen: Help -->
+        <section id="screen-help" class="screen" hidden>
+            <div class="screen-toolbar">
+                <div class="screen-toolbar-left">
+                    <h2 class="screen-title">User Guide</h2>
+                    <div class="screen-subtitle">Learn how to use WordAI</div>
+                </div>
+            </div>
+            <div class="panel" style="max-width: 900px; margin: 0 auto;">
+                <div class="help-content" style="padding: 2rem;">
+                    <iframe src="/help.html" style="width: 100%; height: 80vh; border: none; border-radius: 8px;"></iframe>
+                </div>
             </div>
         </section>
     </main>
