Fix Help page display and layout issues
- Added 'help' to viewIds array in setView() function to enable Help screen navigation
- Moved help content styles from inline CSS to style.css with proper .help-content scoping
- Removed max-width constraint from Help panel to match other pages' width
- Updated help.html to use main stylesheet instead of embedded styles
- Fixed JavaScript to extract only content from .help-content div, avoiding duplicate wrappers
- Added setupHelpAnchorLinks() to handle table of contents anchor navigation within Help page
- Removed all emoji icons from help content headings and text
- Updated SecurityConfig to permit /help.html access
- Incremented JS cache-busting version to force browser reload

This resolves blank Help page issue, layout width inconsistencies, and broken anchor links in table of contents.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -415,14 +415,17 @@
                     <h2 class="screen-title">User Guide</h2>
                     <div class="screen-subtitle">Learn how to use WordAI</div>
                 </div>
+                <div class="screen-toolbar-right">
+                    <a href="/help.html" target="_blank" class="btn btn-secondary">Open in New Tab</a>
+                </div>
             </div>
-            <div class="panel" style="max-width: 900px; margin: 0 auto;">
-                <div class="help-content" style="padding: 2rem;">
-                    <iframe src="/help.html" style="width: 100%; height: 80vh; border: none; border-radius: 8px;"></iframe>
+            <div class="panel">
+                <div id="helpContent" class="help-content" style="padding: 2rem;">
+                    <p>Loading help content...</p>
                 </div>
             </div>
         </section>
     </main>
-    <script src="js/game.js?v=15"></script>
+    <script src="js/game.js?v=20260101143500"></script>
 </body>
 </html>
