Add algorithm feature toggles and Bellman selection strategies
Implemented configuration-based algorithm feature toggles to enable/disable
resource-intensive selection algorithms on lightweight hardware:

Backend Changes:
- Added AlgorithmFeatureService with @Value injection from application.properties
- Added 7 algorithm feature flags (random, entropy, most-common-letters,
  minimise-column-lengths, dictionary-reduction, bellman-optimal,
  bellman-full-dictionary)
- Added @PostConstruct logging to show enabled/disabled algorithms on startup
- Modified WordGameController to validate algorithm availability (HTTP 403 if disabled)
- Added /api/wordai/algorithms to SecurityConfig public endpoints
- Modified /algorithms endpoint to include 'enabled' field in response

Frontend Changes:
- Added loadAlgorithms() function to fetch and filter algorithms dynamically
- Modified all strategy selectors to populate from API (removes disabled options)
- Updated cache-busting version in index.html (?v=20260118153700)
- Added disabled-option CSS styles (greyed out, italic)

New Algorithms:
- Implemented SelectBellmanOptimal (minimizes expected remaining dictionary size)
- Implemented SelectBellmanFullDictionary (uses full dict guesses, tracks state)
- Added algorithm instance caching in GameSession to prevent duplicate guesses
- Added tests for both new algorithms

Bug Fixes:
- Fixed duplicate word selection in SelectBellmanFullDictionary
- Changed WordGame logging from .info() to .fine() to reduce console noise
- Fixed Jakarta annotation import (javax.annotation -> jakarta.annotation)

Configuration:
- Disabled 4 underperforming algorithms by default (most-common-letters,
  minimise-column-lengths, dictionary-reduction, bellman-optimal)
- Kept 3 algorithms enabled (random, entropy, bellman-full-dictionary)

All tests passing (36/36)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -157,6 +157,8 @@
                         <option value="MOST_COMMON_LETTERS">Most Common Letters</option>
                         <option value="MINIMISE_COLUMN_LENGTHS">Minimise Column Lengths</option>
                         <option value="DICTIONARY_REDUCTION">Dictionary Reduction</option>
+                        <option value="BELLMAN_OPTIMAL">Bellman Optimal</option>
+                        <option value="BELLMAN_FULL_DICTIONARY">Bellman Full Dictionary</option>
                     </select>
                     <button id="getSuggestionBtn" class="btn btn-info" onclick="getSuggestion()" style="font-size: 0.875rem; padding: 0.5rem 1rem;">
                         Assist <span id="helpCounter" class="help-counter-inline">3/3</span>
@@ -313,6 +315,8 @@
                             <option value="MOST_COMMON_LETTERS">Most Common Letters</option>
                             <option value="MINIMISE_COLUMN_LENGTHS">Minimise Column Lengths</option>
                             <option value="DICTIONARY_REDUCTION">Dictionary Reduction</option>
+                            <option value="BELLMAN_OPTIMAL">Bellman Optimal</option>
+                            <option value="BELLMAN_FULL_DICTIONARY">Bellman Full Dictionary</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -364,6 +368,8 @@
                             <option value="MOST_COMMON_LETTERS">Most Common Letters</option>
                             <option value="MINIMISE_COLUMN_LENGTHS">Minimise Column Lengths</option>
                             <option value="DICTIONARY_REDUCTION">Dictionary Reduction</option>
+                            <option value="BELLMAN_OPTIMAL">Bellman Optimal</option>
+                            <option value="BELLMAN_FULL_DICTIONARY">Bellman Full Dictionary</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -476,6 +482,6 @@
             </div>
         </section>
     </main>
-    <script src="js/game.js?v=20260101143500"></script>
+    <script src="js/game.js?v=20260118153700"></script>
 </body>
 </html>
