feat: add footer with copyright and legal links to all pages
- Add footer component to index.html, admin.html, login.html, and help.html
- Include copyright © 2026 FistralTech Ltd
- Add links to fistraltech.com, Privacy Policy, Terms of Service, Cookie Policy, and Terms of Sale
- Implement responsive CSS styling for desktop and mobile layouts
- Footer displays horizontally on desktop, vertically stacked on mobile
- Use consistent typography and spacing with existing design system

--- a/src/main/resources/static/help.html
+++ b/src/main/resources/static/help.html
@@ -529,5 +529,21 @@ wordai.dictionary.7letter=path/to/7_letter_words.txt</code></pre>
         <p style="font-size: 0.875rem;">WordAI is inspired by the popular Wordle game, enhanced with AI analysis and educational tools for studying word-guessing strategies.</p>
     </div>
 </div>
+
+<footer class="app-footer">
+    <div class="footer-content">
+        <div class="footer-copyright">
+            © 2026 FistralTech Ltd
+        </div>
+        <nav class="footer-links" aria-label="Footer navigation">
+            <a href="https://fistraltech.com" target="_blank" rel="noopener noreferrer" class="footer-link">fistraltech.com</a>
+            <a href="/index.html#/privacy" class="footer-link">Privacy Policy</a>
+            <a href="/index.html#/terms" class="footer-link">Terms of Service</a>
+            <a href="/index.html#/cookies" class="footer-link">Cookie Policy</a>
+            <a href="/index.html#/terms-sale" class="footer-link">Terms of Sale</a>
+        </nav>
+    </div>
+</footer>
+
 </body>
 </html>
