--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -487,6 +487,22 @@
             <button type="button" id="statusDismiss" class="status-dismiss" aria-label="Clear message" onclick="hideStatus()">×</button>
         </div>
     </div>
+
+    <footer class="app-footer">
+        <div class="footer-content">
+            <div class="footer-copyright">
+                © 2026 FistralTech Ltd
+            </div>
+            <nav class="footer-links" aria-label="Footer navigation">
+                <a href="https://fistraltech.com" target="_blank" rel="noopener noreferrer" class="footer-link">fistraltech.com</a>
+                <a href="#/privacy" class="footer-link">Privacy Policy</a>
+                <a href="#/terms" class="footer-link">Terms of Service</a>
+                <a href="#/cookies" class="footer-link">Cookie Policy</a>
+                <a href="#/terms-sale" class="footer-link">Terms of Sale</a>
+            </nav>
+        </div>
+    </footer>
+
     <script src="js/game.js?v=20260118153700"></script>
 </body>
 </html>
