--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -200,5 +200,21 @@
             document.getElementById('successMessage').style.display = 'none';
         }
     </script>
+
+    <footer class="app-footer">
+        <div class="footer-content">
+            <div class="footer-copyright">
+                © 2026 FistralTech Ltd
+            </div>
+            <nav class="footer-links" aria-label="Footer navigation">
+                <a href="https://fistraltech.com" target="_blank" rel="noopener noreferrer" class="footer-link">fistraltech.com</a>
+                <a href="/index.html#/privacy" class="footer-link">Privacy Policy</a>
+                <a href="/index.html#/terms" class="footer-link">Terms of Service</a>
+                <a href="/index.html#/cookies" class="footer-link">Cookie Policy</a>
+                <a href="/index.html#/terms-sale" class="footer-link">Terms of Sale</a>
+            </nav>
+        </div>
+    </footer>
+
 </body>
 </html>
