--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -490,7 +490,7 @@
     <footer class="app-footer">
         <div class="footer-content">
             <div class="footer-copyright">
-                © 2026 FistralTech Ltd
+                © 2026 FistralTech Ltd | v1.5.2
             </div>
             <nav class="footer-links" aria-label="Footer navigation">
                 <a href="https://fistraltech.com" target="_blank" rel="noopener noreferrer" class="footer-link">fistraltech.com</a>
