Remove duplicate documentation files and fix cross-references
- Delete 14 original markdown files from root (now only in docs/)
- Update help.html to reference ../../../docs/deployment/authentication.md
- Update USER_GUIDE.md link in docs/ to use relative path
- Update CLOUD_DEPLOYMENT.md link to point to docs/ location
- Eliminates duplication and reduces root directory clutter
- Single source of truth for all documentation

--- a/src/main/resources/static/help.html
+++ b/src/main/resources/static/help.html
@@ -129,7 +129,7 @@
     </ul>
 
     <h3>OAuth Options</h3>
-    <p>Google and Apple Sign-In are available but require configuration (see <a href="AUTHENTICATION_SETUP.md" target="_blank">AUTHENTICATION_SETUP.md</a>).</p>
+    <p>Google and Apple Sign-In are available but require configuration (see <a href="../../../docs/deployment/authentication.md" target="_blank">Authentication Setup</a>).</p>
     
     <hr>
     
